...
            <objects>
                <viewController storyboardIdentifier="AddCityViewController" id="NUT-tq-4DE" customClass="AddCityViewController" customModule="WeatherMVP" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="g2W-On-6Pd">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="City" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XAm-Wb-fmJ">
                                <rect key="frame" x="16" y="100" width="288" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="kqB-Jy-KWm">
                                <rect key="frame" x="70" y="229" width="180" height="110"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1b4-VD-8Bp">
                                        <rect key="frame" x="0.0" y="0.0" width="180" height="30"/>
                                        <state key="normal" title="AddCity"/>
                                        <connections>
                                            <action selector="addNameTap:" destination="NUT-tq-4DE" eventType="touchUpInside" id="801-05-870"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lXi-XD-RRf">
                                        <rect key="frame" x="0.0" y="80" width="180" height="30"/>
...
